samples/_failures_safe/1761616425_400b29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_531c0860.c: In function ‘tokenize’:
./samples/SAFE/__tmp_531c0860.c:169:17: error: expected declaration or statement at end of input
  169 |                 col++;
      |                 ^~~
./samples/SAFE/__tmp_531c0860.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_531c0860.c:169:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_531c0860.c:169:17: error: expected declaration or statement at end of input
